# stm32-canbus-firmware-update

./: .gitignore  README.md  build_flash.py  build_flash.sh
canbus-common/: Cargo.toml  README.md
canbus-common/src/: frame_id.rs  lib.rs
canbus-common/src/frames/: dyn_id.rs  firmware.rs  mod.rs  serial.rs  version.rs
raspberry/: Cargo.toml  run.sh
raspberry/src/: can_bus.rs  fw_upload.rs  main.rs  util.rs
stm32/: Cargo.toml  README.md  add_header.rs  board.cfg  build_for_bootloader.py  build_for_bootloader.sh  memory.x  memoryx_wizard.py  memoryx_wizard.rs
stm32/app/: Cargo.toml  openocd.gdb
stm32/app/.cargo/: config.toml
stm32/app/src/: main.rs
stm32/app/src/util/: can.rs
stm32/helpers/: Cargo.toml
stm32/helpers/src/: firmware_update.rs  lib.rs  pending_fw.rs
stm32_bootloader/: Cargo.toml  build_bin.sh  memory.x
stm32_bootloader/src/: main.rs
