[package]
name = "canbus-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "0.2.2"
byteorder = { version = "1.4.3", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
heapless = "0.7.16"
hex = { version = "0.4.3", default-features = false }

[dependencies.num-traits]
version = "0.2"
default-features = false
