[package]
name = "canbus_raspberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-socketcan = "0.3.1"
futures-util = "0.3.25"
socketcan = "*"
futures = "0.3.25"
crc32fast = "1.3.2"

canbus-common = { path = "../canbus-common" }
crc8-fast = {git = "https://github.com/BrMisha/rust-crc8-fast.git"}