[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m = "0.7.6"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.5.0"
systick-monotonic = "1.0.0"
panic-halt = "0.2.0"
heapless = "0.7.16"
bxcan = { version = "0.7.0", features = ["unstable-defmt"] }
nb = "1.0.0"
canbus-common = {path = "../../canbus-common"}
crc8-fast = {git = "https://github.com/BrMisha/rust-crc8-fast.git"}
helpers = {path = "../helpers"}

arrayvec = { version = "0.7.2", default-features = false }
#crc8 = "0.1.1"

crc32fast = { version = "1.3.2", default-features = false }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[dependencies.num-traits]
version = "0.2"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
