[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
#crc32fast = { version = "1.3.2", default-features = false }
crc32c-hw = { version = "0.1.3", features = ["no-stdlib"] }
canbus-common = {path = "../../canbus-common"}

[dev-dependencies]
rand = "0.8.5"